- Rename(fieldname=('f1','f2')) type of command now supported to rename multiple slices with same name
- Similar support for Cast
- Handle distributions in which the 'python' interpreter is mapped to python 3.x (assumes 'python2' exists in those cases)
- Handle errors where develop directory is created, but develop scripts fails


0.1.18
- Add warning for old numpy versions
- Changed names of db connection functions to start with uppercase (Query, Store, Drop)
- Added handling for special db types
- Fixed free query support
- Fixed store support
- Added file_db command to Get  (use Get.file_db('my_database.db'))
- Get string functions do not work for string9, rename Get.string. to Get.string8. Support for string9 will come later.

0.1.19
- Added a primitive format detection.
- Fixed gz unpacking
- Added FASTA read support
- Allow user to add custom formats
- Add Detect function, to determine unknown types, and cast e.g. string types to integers where possible
- Add allow_convert option ([default] False) incorporating Detect functionality in Rep
- Better error message for attribute access failure. 
- Stack/Intersect/Union/Except/Difference allow now for dimension selection, slice selection.
- Filtering of slices without common dimensions now possible using item select (i.e. []) 
- Output dimension ordering
- Improved documentation
- Various fixes

0.1.20
- Fixed bug introduced in filtering
- Fixed bug where easy_install prevents start

0.1.21
- Hopefully final fix to support active python3 interpreter next to python2

0.1.22
- Replace C modules with pure Python to further simplify installation

0.1.23
- Work around numpy 1.7 issue.
- Fix check for old python version
- AddSlice accepts ibidas objects
- SplitDim, HArray autogenerated dimension names now consistent across runs
- getShape renamed to Shape. Shape types know not unknown
- changed default dim of flat parameter of GroupBy for multi-dimensional groups
- automatic renaming of dims when conflicts occur